--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2em;
+    background-color: #DEB8B8;
 }
 
 .home-heading h1 {
@@ -81,4 +82,9 @@
     margin-top: 0.5em;
     font-size: 0.9em;
     text-align: center;
+}
+
+body {
+    margin: 0;
+    background-color: #36454F;
 }
