--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -146,7 +146,8 @@
 
 /* Modal box */
 .modal-content {
-  background: white;
+  color: white;
+  background: #637e91;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
@@ -164,10 +165,33 @@
 
 .modal-content input[type="password"] {
   width: 100%;
-  padding: 0.5rem;
-  margin-top: 0.75rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  padding: 0.6em;
+  border-radius: 4px;
+  border: 1px solid #444;
+  background-color: #2c2c2c;
+  color: #fff;
+  font-size: 0.95rem;
+  transition: border-color 0.2s ease;
+}
+
+.modal-actions #confirm {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 0.7em;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.modal-actions #cancel {
+  background-color: #af4c4c;
+  color: white;
+  border: none;
+  padding: 0.7em;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 @keyframes fadeIn {
